--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <View
+        android:paddingTop="4dp"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="#FF0000FF" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
@@ -21,11 +26,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/editText_hint_vorname"
-            android:inputType="number"
             android:id="@+id/editText_vorname"
             android:layout_weight="1"
             android:background="@drawable/border"
-            tools:textSize="8sp" />
+            android:textSize="12sp"
+            tools:textSize="8sp"
+            android:gravity="center_vertical|center_horizontal" />
+        <View
+            android:paddingTop="4dp"
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:background="#FF0000FF" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -33,8 +44,16 @@
             android:hint="@string/editText_hint_nachname"
             android:id="@+id/editText_nachname"
             android:background="@drawable/border"
+            android:textSize="12sp"
             android:layout_weight="4"
-            tools:textSize="8sp" />
+            tools:textSize="8sp"
+            android:gravity="center_vertical|center_horizontal" />
+
+        <View
+            android:paddingTop="4dp"
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:background="#FF0000FF" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -42,9 +61,16 @@
             android:hint="@string/editText_hint_geburtsdatum"
             android:id="@+id/editText_geburtstag"
             android:background="@drawable/border"
+            android:textSize="12sp"
             android:layout_weight="4"
             tools:textSize="8sp"
-            android:inputType="date"/>
+            android:inputType="date"
+            android:gravity="center_vertical|center_horizontal" />
+        <View
+            android:paddingTop="4dp"
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:background="#FF0000FF" />
 
         <Button
             android:layout_width="wrap_content"
@@ -53,6 +79,12 @@
             android:id="@+id/button_add_user"
             tools:textSize="10sp" />
     </LinearLayout>
+   <!-- Horizontale Linie -->
+    <View
+        android:paddingTop="4dp"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="#FF0000FF" />
 
     <ListView
         android:layout_width="match_parent"
