--- a/app/src/main/res/layout/personendaten.xml
+++ b/app/src/main/res/layout/personendaten.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <TextView
         android:text="TextView"
-        android:layout_width="70dp"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
+        android:id="@+id/textView_id" />
 
     <TextView
         android:text="TextView"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
+        android:id="@+id/textView_nachname"
         android:layout_width="70dp" />
 
     <TextView
         android:text="TextView"
         android:layout_height="wrap_content"
-        android:id="@+id/textView3"
+        android:id="@+id/textView_vorname"
         android:layout_width="70dp" />
 
     <TextView
         android:text="TextView"
-        android:layout_width="match_parent"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4" />
+        android:id="@+id/textView_geburtstag" />
+
+    <include
+        android:id="@+id/text1"
+        layout="@android:layout/simple_list_item_multiple_choice"
+        android:visibility="visible"
+        />
 </LinearLayout>
+
